# rust-grpc-new

./: Cargo.toml  README.md  build.rs
src/: main.rs  server.rs
src/internal/: mod.rs
src/internal/handler/: greeter.rs
src/internal/repository/: greeter.rs  mod.rs  repository.rs
src/internal/usecase/: greeter.rs  greeter_test.rs  mod.rs  usecase.rs
